# goloom

./: .dockerignore  .env.example  .gitignore  AGENT.md  AGENTS.md  Agents.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose-traefik.yml  docker-compose.yml  flake.nix  go.mod  go.sum  justfile  redocly.yaml  renovate.json
ai-service/: .env.example  AGENTS.md  Dockerfile  pyproject.toml  start.sh
ai-service/ai_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai-service/app/: __init__.py  config.py  main.py  proactive_defaults.py
ai-service/app/adapters/: __init__.py  anthropic_adapter.py  base.py  factory.py  models.py  openai_adapter.py
ai-service/app/models/: jobs.py
ai-service/app/prompts/: __init__.py  anti_ai.py  builder.py  templates.py
ai-service/app/scheduling/: __init__.py  slots.py
ai-service/app/services/: __init__.py  goloom_client.py
ai-service/app/workers/: __init__.py  campaign.py  profile_analysis.py  profile_assistant.py  router.py  vibe_preview.py  voice_engine.py
ai-service/app/workers/proactive/: __init__.py  cron_schedule.py  event_hooks.py  rss.py  scheduler.py  trigger_manager.py
ai-service/tests/: conftest.py  test_adapters.py  test_campaign_worker.py  test_config.py  test_cron_schedule.py  test_goloom_client.py  test_health.py  test_proactive.py  test_prompts.py  test_rss.py  test_scheduling_slots.py  test_voice_engine.py
api/: account_revoke_test.go  admin_logs.go  admin_metrics.go  admin_publish_failures.go  admin_sync.go  agenttools.go  ai_callback.go  ai_callback_test.go  ai_sse.go  (+65 more)
(+541 files in other folders)
